[package]
name = "heightmap"
version = "0.5.0"
authors = ["Meshiest <meek.mesh@gmail.com>"]
edition = "2018"
resolver = "2"

[dependencies]
brs = "0.2.0"
image = "0.23.4"
clap = "^3.0.0-beta.4"
byteorder = "1.3.4"
openexr = "0.10.1"

[dev-dependencies]
nfd = "0.0.4"
epi = "0.12.0"
egui = "0.12.0"
egui_glium = "0.12.0"


[[example]]
name = "gui"
